--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     # Database
     "sqlalchemy>=2.0.25",
     "aiosqlite>=0.19.0",
+    "greenlet>=3.0.0",
     # Testing
     "pytest>=7.4.4",
     "pytest-asyncio>=0.23.3",
