--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
-NEXT_PUBLIC_API_URL=http://localhost:8000
-NEXT_PUBLIC_THESYS_API_KEY=your-thesys-api-key
+# Backend API URL
+NEXT_PUBLIC_API_URL=http://localhost:8000/api
+
+# Thesys API Key
+NEXT_PUBLIC_THESYS_API_KEY=your-thesys-api-key-here
